--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1,6 +1,66 @@
 *{
     font-family: Arial, Helvetica, sans-serif;
 }
+
+@media all and (max-width: 2000px) {
+    html {
+        font-size: 20px;
+    }
+    #socialMedias{
+        left:87%;
+    }
+    #luggage{
+        flex-direction: row;
+        justify-content: space-around;
+    }
+    #main,#hand{
+        width:20vw;
+        height:60vh;
+    }
+}
+
+@media all and (max-width: 1400px) {
+    html {
+        font-size: 14px;
+    }
+    #enter{
+        display:none;
+    }
+    #socialMedias{
+        left:81%;
+    }
+    #luggage{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    #main,#hand{
+        width:90vw;
+        height:30vh;
+    }
+}
+
+@media all and (max-width: 1200px) {
+    html {
+        font-size: 12px;
+    }
+    #enter{
+        display:none;
+    }
+    #socialMedias{
+        left:81%;
+    }
+    #luggage{
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+    }
+    #main,#hand{
+        width:90vw;
+        height:30vh;
+    }
+}
+
 body{
     display:flex;
     flex-direction: column;
@@ -22,16 +82,16 @@ body{
     width:80%;
     background-color: rgba(255,255,255,0.7);
     top:35%;
+    box-shadow: 2px 2px 5px -2px rgba(0,0,0,0.75);
 }
 #socialMedias{
     position: absolute;
-    left:87%;
     display:flex;
     justify-content: flex-end;
 }
 #enter{
     position: absolute;
-    left:80%;
+    left:70%;
     height:3vh;
 }
 #slideMenu{
@@ -46,22 +106,17 @@ body{
 }
 #search{
     height:40%;
-    width:70%;
+    width:60%;
     text-align:center;
     opacity: 0.8;
 }
 #luggage{
     display:none;
-    flex-direction: row;
     width:100%;
     height:60vh;
-    align-content: center;
-    justify-content: space-around;
 }
 #main,#hand{
     display:flex;
-    width:20%;
-    height:60vh;
     flex-direction: column;
     border:1px solid black;
     flex:2;
@@ -95,7 +150,7 @@ body{
     align-items: center;
 }
 #mainCheck,#handCheck{
-    width:15vw;
+    width:12vw;
 }
 #adLeft,#adMid,#adRight{
     display:flex;
@@ -109,9 +164,10 @@ body{
 #socialMedias img{
     width:4vh;
     display:flex;
+    padding-right:0.5vh;
 }
 h1{
-    font-size:2vw;
+    font-size:3vw;
 }
 @keyframes slide {
     0% {
