--- a/static/css/style.css
+++ b/static/css/style.css
@@ -39,6 +39,7 @@
     #main,#hand{
         width:90vw;
         height:30vh;
+        margin:1rem;
     }
 }
 
@@ -142,6 +143,14 @@ body{
     animation: slide 1s ease;
     animation-fill-mode: forwards;
 }
+.luggageAppearAnim{
+    animation: luggageAppear 1s ease;
+    animation-fill-mode: forwards;
+}
+.colorChangeAnim{
+    animation: changeColor 1.5s ease;
+    animation-fill-mode: none;
+}
 #socialMedias img{
     width:4vh;
     display:flex;
@@ -151,13 +160,32 @@ h1{
     font-size:3vw;
 }
 @keyframes slide {
-    0% {
-      top: 25%;
-    }
     100% {
       top: 2%;
     }
   
+}
+@keyframes luggageAppear{
+    0%{
+        opacity: 0;
+    }
+    100%{
+        opacity:1;
+    }
+}
+@keyframes changeColor{
+    0%{
+        opacity: 1;
+    }
+    40%{
+        opacity:0;
+    }
+    60%{
+        opacity: 0;
+    }
+    100%{
+        opacity:1;
+    }
 }
 #handInfo{
     font-weight: bold;
