--- a/static/css/style.css
+++ b/static/css/style.css
@@ -45,8 +45,6 @@
 
 body{
     display:flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
     background-image: url("https://images.pexels.com/photos/417045/pexels-photo-417045.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
     height: 100vh;
@@ -156,6 +154,34 @@ body{
     display:flex;
     padding-right:0.5vh;
 }
+.warning{
+    width:7%;
+    height: 10%;
+    background-color: rgba(255,255,255,0.7);
+    box-shadow: 2px 2px 5px -2px rgba(0,0,0,0.75);
+    position: absolute;
+    left:0;
+    top:0;
+    font-size:10px;
+    
+    border-radius: 0 20px 20px 0;
+}
+.warningSlideAnim{
+    animation: warningSlide 1s ease;
+    animation-fill-mode: forwards;
+}
+.warningBackSlideAnim{
+    animation: warningBackSlide 1s ease;
+    animation-fill-mode: forwards;
+}
+.siteBody{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    height: 100vh;
+    margin:0;
+    padding:0;
+}
 h1{
     font-size:3vw;
 }
@@ -185,6 +211,22 @@ h1{
     }
     100%{
         opacity:1;
+    }
+}
+@keyframes warningSlide{
+    0%{
+        width:7%;
+    }
+    100%{
+        width:50%;
+    }
+}
+@keyframes warningBackSlide{
+    0%{
+        width:50%;
+    }
+    100%{
+        width:7%;
     }
 }
 #handInfo{
