--- a/static/css/style.css
+++ b/static/css/style.css
@@ -17,9 +17,7 @@
         width:20vw;
         height:60vh;
     }
-    #navbar{
-        height:10%;
-    }
+    
 }
 
 
@@ -44,9 +42,6 @@
         height:30vh;
         margin:1rem;
     }
-    #navbar{
-        height:15%;
-    }
 }
 
 body{
@@ -64,7 +59,7 @@ body{
     justify-content: center;
     align-items: center;
     border-radius: 20px;
-    
+    height:10%;
     width:80%;
     background-color: rgba(255,255,255,0.7);
     top:35%;
@@ -137,6 +132,7 @@ body{
 }
 #mainCheck,#handCheck{
     width:12vw;
+    max-width:300px;
 }
 #adLeft,#adMid,#adRight{
     display:flex;
@@ -196,7 +192,7 @@ body{
     padding:0;
 }
 h1{
-    font-size:3vw;
+    font-size:2rem;
 }
 .fadeOutAnim{
     animation: fadeOut 1s ease;
@@ -255,7 +251,7 @@ h1{
         width:50px;
     }
 }
-#handInfo{
+#handInfo, #mainInfo{
     font-weight: bold;
     font-size:1.9vw;
 }
