--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,14 +43,22 @@
         margin:1rem;
     }
 }
-
-body{
+html{
+    scroll-behavior: smooth;
+}
+#mainBody{
     display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+    margin:0 auto;
+    overflow: hidden;
     align-items: center;
+}
+body{
     background-image: url("https://images.pexels.com/photos/417045/pexels-photo-417045.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260");
-    height: 100vh;
     margin:0;
     padding:0;
+    background-attachment: fixed;
 }
 #navbar{
     display:flex;
@@ -198,16 +206,53 @@ body{
     padding:0;
     justify-content: space-between;
 }
-.contextMenu{
+.header{
     width:100%;
     background-color: rgba(255,255,255,0.7);
     box-shadow: 2px 2px 5px -2px rgba(0,0,0,0.75);
     display:flex;
     justify-content: space-around;
     align-items: center;
+    position:fixed;
+    z-index:1;
+}
+#articleSection{
+    width:80vw;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+}
+.articleBody{
+    background-color: rgba(255,255,255,0.7);
+    padding:20px;
+    text-align: justify;
+    margin-bottom: 50px;
+    font-size:1em;
+    box-shadow: 2px 2px 5px -2px rgba(0,0,0,0.75);
+}
+.articleText{
+    text-align:justify;
+    font-size:0.9em;
+    margin:30px;
+}
+.articleHeader{
+    font-size:1.2em;
+}
+.articleContent{
+    display:flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+.articleImage{
+    width:20%;
+    box-shadow: 2px 2px 5px -2px rgba(0,0,0,0.75);
+    margin:30px;
 }
 .headerElem{
     height:50%;
+    color:black;
+    text-decoration: none;
     font-size:1.1rem;
     font-style: italic;
     transition:0.2s ease-out;
@@ -228,7 +273,7 @@ h1{
 
 @keyframes slide {
     100% {
-      top: 12%;
+      top: 10%;
     }
   
 }
