--- a/static/css/style.css
+++ b/static/css/style.css
@@ -78,6 +78,37 @@ body{
     padding:0;
     background-attachment: fixed;
 }
+#overlay{
+    position: absolute;
+    margin: 10%;
+    font-size:0.7rem;
+    text-align: center;
+    top:15%;
+    padding:50px;
+    background-color: rgba(255,255,255,0.7);
+    box-shadow: 2px 2px 5px -2px rgba(0,0,0,0.75);
+    z-index:1;
+    transition:0.5s ease-out;
+}
+#overlayButton{
+    background-color: #4287f5;
+    color:white;
+    font-size:1.2rem;
+    width:10rem;
+    margin:0 auto;
+    border-radius: 5px;
+    padding:5px;
+    transition:0.2s ease-out;
+}
+#overlayButton:hover{
+    background-color: #2f62b4;
+}
+.overlayDisappear{
+    opacity: 0;
+}
+.blur{
+    filter: blur(1.2rem);
+}
 #navbar{
     display:flex;
     position: absolute;
