--- a/static/css/style.css
+++ b/static/css/style.css
@@ -11,6 +11,7 @@
     }
     #luggage{
         flex-direction: row;
+        padding-top:25vh;
     }
     #main,#hand{
         width:20vw;
@@ -44,6 +45,7 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
+        padding-top:50vh;
     }
     #main,#hand{
         width:90vw;
@@ -59,6 +61,9 @@
     }
     .articleText{
         margin:10px;
+    }
+    #articleSection{
+        padding-top:40vh;
     }
 }
 html{
@@ -150,7 +155,6 @@ body{
     display:none;
     width:100%;
     height:60vh;
-    padding-top:25vh;
 }
 #main,#hand{
     display:flex;
@@ -296,6 +300,9 @@ body{
     box-shadow: 2px 2px 5px -2px rgba(0,0,0,0.75);
     margin:20px;
 }
+.luggageImage{
+    width:90%;
+}
 .headerElem{
     height:50%;
     color:black;
@@ -311,7 +318,7 @@ body{
     font-weight: bold;
 }
 h1{
-    font-size:2rem;
+    font-size:1.5rem;
 }
 .fadeOutAnim{
     animation: fadeOut 1s ease;
